--- a/insight-ui-komodo/package.json
+++ b/insight-ui-komodo/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "insight-ui-komodo",
-  "description": "An open-source frontend for the Insight API. The Insight API provides you with a convenient, powerful and simple way to query and broadcast data on the komodo network and build your own services with it.",
+  "name": "insight-ui-ciphscoin",
+  "description": "An open-source frontend for the Insight API. The Insight API provides you with a convenient, powerful and simple way to query and broadcast data on the Ciphscoin network and build your own services with it.",
   "version": "0.4.0",
   "repository": {
     "type": "git",
-    "url": "git+https://git@github.com/DeckerSU/insight-ui-komodo.git"
+    "url": "git+https://git@github.com/ciphscoin/insight-ui-ciphscoin.git"
   },
   "contributors": [
     {
@@ -33,9 +33,9 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/supernetorg/insight-ui-komodo/issues"
+    "url": "https://github.com/ciphscoin/insight-ui-ciphscoin/issues"
   },
-  "homepage": "https://github.com/supernetorg/insight-ui-komodo",
+  "homepage": "https://github.com/ciphscoin/insight-ui-ciphscoin/",
   "license": "MIT",
   "keywords": [
     "insight",
